modules/gdscript/tests/scripts/analyzer/errors/virtual_method_not_implemented.gd
func test():
	_get_property_list()
